--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.3",
-    "@tanstack/react-query": "^4.29.3",
+    "@tanstack/react-query": "^4.29.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.4.6",
     "antd-img-crop": "^4.12.2",
+    "axios": "^1.4.0",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
