--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-simple-maps": "^3.0.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
+    "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
